--- a/_sass/theme-variables.scss
+++ b/_sass/theme-variables.scss
@@ -58,8 +58,9 @@ $h2-font-size:                        1.6rem;
 $h3-font-size:                        1.2rem;
 $h3-p:                                $spacer/2 0;
 
-$icon-email-w:                        1.5rem;
-$icon-email-mt:                       -2px;
+$icon-email-w:                        20px;
+$icon-email-h:                        15px;
+$icon-email-o:                        .8;
 
 $prg-icon-large-w:                    $icon-email-w;
 
